--- a/bank/index.html
+++ b/bank/index.html
@@ -24,6 +24,7 @@
           }),
           headers: {
             'Content-Type': 'application/json',
+            'Authorization': 'supersecretauthenticationtoken',
           },
         }).then((res) => {
           if (res.ok) {
